expand numeric variables, squeeze code by this

--- a/src/partials/1_header.html
+++ b/src/partials/1_header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="container isVeiled" id="header">
-    <div class="logo">
+    <a class="logo link" href="/">
       <svg width="40" height="35">
         <use href="./images/sprite.svg#logo"></use>
       </svg>
@@ -8,7 +8,7 @@
       <p class="logo-text">
         <span class="part1">Finance</span><span class="part2">Ledger</span>
       </p>
-    </div>
+    </a>
 
     <nav>
       <ul class="nav list">
