--- a/src/partials/6_team.html
+++ b/src/partials/6_team.html
@@ -67,24 +67,49 @@
           <div class="slide">
             <ul class="social-list list">
               <li>
-                <svg width="35" height="35">
-                  <use href="./images/sprite.svg#fb"></use>
-                </svg>
+                <a
+                  class="link"
+                  href="https://www.facebook.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="35" height="35">
+                    <use href="./images/sprite.svg#fb"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <svg width="35" height="30">
-                  <use href="./images/sprite.svg#tweet"></use>
-                </svg>
+                <a
+                  class="link"
+                  href="https://twitter.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="35" height="30">
+                    <use href="./images/sprite.svg#tweet"></use></svg
+                ></a>
               </li>
               <li>
-                <svg width="38" height="27">
-                  <use href="./images/sprite.svg#utube"></use>
-                </svg>
+                <a
+                  class="link"
+                  href=" https://www.youtube.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="38" height="27">
+                    <use href="./images/sprite.svg#utube"></use></svg
+                ></a>
               </li>
               <li>
-                <svg width="31" height="31">
-                  <use href="./images/sprite.svg#link"></use>
-                </svg>
+                <a
+                  class="link"
+                  href="https://www.linkedin.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="31" height="31">
+                    <use href="./images/sprite.svg#link"></use></svg
+                ></a>
               </li>
             </ul>
           </div>
@@ -151,24 +176,49 @@
           <div class="slide">
             <ul class="social-list list">
               <li>
-                <svg width="35" height="35">
-                  <use href="./images/sprite.svg#fb"></use>
-                </svg>
+                <a
+                  class="link"
+                  href="https://www.facebook.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="35" height="35">
+                    <use href="./images/sprite.svg#fb"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <svg width="35" height="30">
-                  <use href="./images/sprite.svg#tweet"></use>
-                </svg>
+                <a
+                  class="link"
+                  href="https://twitter.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="35" height="30">
+                    <use href="./images/sprite.svg#tweet"></use></svg
+                ></a>
               </li>
               <li>
-                <svg width="38" height="27">
-                  <use href="./images/sprite.svg#utube"></use>
-                </svg>
+                <a
+                  class="link"
+                  href=" https://www.youtube.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="38" height="27">
+                    <use href="./images/sprite.svg#utube"></use></svg
+                ></a>
               </li>
               <li>
-                <svg width="31" height="31">
-                  <use href="./images/sprite.svg#link"></use>
-                </svg>
+                <a
+                  class="link"
+                  href="https://www.linkedin.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="31" height="31">
+                    <use href="./images/sprite.svg#link"></use></svg
+                ></a>
               </li>
             </ul>
           </div>
@@ -236,24 +286,49 @@
           <div class="slide">
             <ul class="social-list list">
               <li>
-                <svg width="35" height="35">
-                  <use href="./images/sprite.svg#fb"></use>
-                </svg>
+                <a
+                  class="link"
+                  href="https://www.facebook.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="35" height="35">
+                    <use href="./images/sprite.svg#fb"></use>
+                  </svg>
+                </a>
               </li>
               <li>
-                <svg width="35" height="30">
-                  <use href="./images/sprite.svg#tweet"></use>
-                </svg>
+                <a
+                  class="link"
+                  href="https://twitter.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="35" height="30">
+                    <use href="./images/sprite.svg#tweet"></use></svg
+                ></a>
               </li>
               <li>
-                <svg width="38" height="27">
-                  <use href="./images/sprite.svg#utube"></use>
-                </svg>
+                <a
+                  class="link"
+                  href=" https://www.youtube.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="38" height="27">
+                    <use href="./images/sprite.svg#utube"></use></svg
+                ></a>
               </li>
               <li>
-                <svg width="31" height="31">
-                  <use href="./images/sprite.svg#link"></use>
-                </svg>
+                <a
+                  class="link"
+                  href="https://www.linkedin.com/"
+                  rel="noopener"
+                  target="_blank"
+                >
+                  <svg width="31" height="31">
+                    <use href="./images/sprite.svg#link"></use></svg
+                ></a>
               </li>
             </ul>
           </div>
