--- a/src/sass/0/helpers/_presets.scss
+++ b/src/sass/0/helpers/_presets.scss
@@ -8,17 +8,17 @@ body {
   color: var(--text-color);
   user-select: none;
 }
+// ======================= scrollbar ==========================
 body::-webkit-scrollbar {
   width: 6px;
 }
 body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 255, 0, 0.3);
+  box-shadow: var(--scroll-bar-shadow);
 }
 body::-webkit-scrollbar-thumb {
   background-color: green;
   outline: 1px solid #fff;
-}
-
+}// =========================================================
 h1,
 h2,
 h3,
