--- a/src/partials/2_hero.html
+++ b/src/partials/2_hero.html
@@ -4,7 +4,7 @@
     <p class="hero-tagline">We provide world class financial assistance</p>
     <button type="button" class="btn">
       <svg class="sign-more" width="9" height="12">
-4        <use xlink:href="./images/sprite.svg#more"></use>
+        <use xlink:href="./images/sprite.svg#more"></use>
       </svg>
       <p>Read More</p>
     </button>
