--- a/src/sass/0/_1_header.scss
+++ b/src/sass/0/_1_header.scss
@@ -2,18 +2,18 @@ header {
   position: fixed;
   width: 100%;
 
-  transition: transform 500ms linear;
+  transition: transform var(--delta-t) linear;
 }
 
 header .container {
   height: 120px;
   padding: 20px 16px 0;
 
-  transition: opacity 500ms linear;
+  transition: opacity var(--delta-t) linear;
 }
 
 .isVeiled {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+  background-image: var(--mask);
 }
 
 .logo {
@@ -21,7 +21,7 @@ header .container {
   align-items: center;
   justify-content: center;
 
-  transition: transform 250ms;
+  transition: transform var(--delta-t);
 }
 
 .logo:hover {
