--- a/src/sass/0/_2_hero.scss
+++ b/src/sass/0/_2_hero.scss
@@ -11,23 +11,10 @@
   @media screen and (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-      url(../images/home/hero/m/showcase@2x.jpg);
+    background-image: var(--mask), url(../images/home/hero/m/showcase@2x.jpg);
   }
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(../images/home/hero/m/showcase.jpg);
-
-  // -webkit-image-set(
-  //   url(../images/home/hero/m/showcase.jpg) 1x
-  // );
-  // background-image: linear-gradient(
-  //       rgba(47, 48, 58, 0.4),
-  //       rgba(47, 48, 58, 0.4)
-  //     ),
-  //     -webkit-image-set(url(../images/tablet_w/img.webp) 1x, url(../images/tablet_w/img@2x.webp)
-  //           2x, url(../images/tablet/img.jpg) 1x, url(../images/tablet/img@2x.jpg)
-  //           2x);
-}
+  background-image: var(--mask), url(../images/home/hero/m/showcase.jpg);
+} // -webkit-image-set(url(../images/home/hero/m/showcase.jpg) 1x);
 
 .hero-title {
   font-size: 52px;
@@ -54,5 +41,5 @@
 }
 
 .hero .btn:hover {
-  opacity: 0.9;
+  opacity: var(--btn-hover-opacity);
 }
