--- a/src/sass/0/_6_team.scss
+++ b/src/sass/0/_6_team.scss
@@ -14,22 +14,21 @@
 }
 
 .team img {
-  transition: transform 250ms;
+  transition: transform var(--delta-t);
 }
 
 .thumb {
   height: 186px;
   overflow: hidden;
-  transition: all 250ms;
-
+  transition: all var(--delta-t);
 }
 
 .slide {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+  background-image: var(--team-mask);
   display: flex;
   align-items: center;
   height: 186px;
-  transition: transform 250ms;
+  transition: transform var(--delta-t);
 }
 
 .team-item:hover .slide {
@@ -37,12 +36,12 @@
 }
 
 .team-item:hover .thumb {
-  box-shadow: 2px 2px 12px 2px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 2px 12px 2px var(--half-hero-mask);
   transform: scale(1.025);
 }
 
 .team .social-list li:hover svg {
-  opacity: 0.8;
+  opacity: var(--soc-transparency);
 }
 
 .team .name {
