make header invisible at start

--- a/src/partials/1_header.html
+++ b/src/partials/1_header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="container isVeiled" id="header">
+  <div class="container" id="header">
     <a class="logo link" href="/">
       <svg width="40" height="35">
         <use href="./images/sprite.svg#logo"></use>
